k8s/exercises/01-java-app-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-app
  namespace: exercises
spec:
  replicas: 2
  selector:
    matchLabels:
      app: java-app
  template:
    metadata:
      labels:
        app: java-app
    spec:
      terminationGracePeriodSeconds: 5
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      imagePullSecrets:
      - name: aws-ecr-config
      containers:
      - name: java-app-container
        image: 010928217051.dkr.ecr.eu-central-1.amazonaws.com/k8s-imgs:java-app-1.8
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
          privileged: false
          readOnlyRootFilesystem: false # security best pratice is true, but tomcat needs to create tmpdir 
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 25
          periodSeconds: 5
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 25
          periodSeconds: 5
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: java-app
  namespace: exercises
  labels:
    app: java-app
spec:
  type: ClusterIP
  selector:
    app: java-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
    #nodePort: 30001
