k8s/exercises/01-mysql-service.yaml
# Headless service for stable DNS entries of StatefulSet members.
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: exercises
  labels:
    app: mysql
spec:
  ports:
  - name: mysql
    port: 3306
  clusterIP: None
  selector:
    app: mysql
---
# Client service for connecting to any MySQL instance for reads.
# For writes, you must instead connect to the primary: mysql-0.mysql
# P.S. sometimes writes can be possible through mysql-read service if it chooses the root replica at random!
apiVersion: v1
kind: Service
metadata:
  name: mysql-read
  namespace: exercises
  labels:
    app: mysql
    readonly: "true"
spec:
  ports:
  - name: mysql
    port: 3306
  selector:
    app: mysql
